--- a/index.html
+++ b/index.html
@@ -1,6 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+<script>
+  if (location.hostname === "www.holodeck.xr.hns.to") {
+    location.href = location.protocol + "//holodeck.xr.hns.to" + location.pathname + location.search + location.hash;
+  }
+</script>
+
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>The Holodeck | High-Fidelity Wireless VR</title>
